# football-cdf

./: .gitignore  README.md  pyproject.toml
football_cdf/: __init__.py  base.py  bepro_actions.py  bepro_preprocessing.py  constants.py  contracts.py  skillcorner_api.py  skillcorner_paths.py  skillcorner_preprocessing.py  sportec_preprocessing.py  statsbomb_mappings.py  statsbomb_paths.py  statsbomb_preprocessing.py  utils.py
